--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
     <modules>
         <module>disconf-client</module>
         <module>disconf-core</module>
-        <module>disconf-web</module>
     </modules>
 
     <inceptionYear>2015</inceptionYear>
@@ -827,7 +826,7 @@
     <name>disconf</name>
     <description>Distributed Configuration Management Platform.</description>
 
-    <profiles>
+   <!--  <profiles>
         <profile>
             <id>release</id>
             <distributionManagement>
@@ -842,7 +841,7 @@
             </distributionManagement>
             <build>
                 <plugins>
-                    <!-- Source -->
+                    Source
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
@@ -856,7 +855,7 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <!-- Javadoc -->
+                    Javadoc
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
@@ -887,6 +886,45 @@
                 </plugins>
             </build>
         </profile>
-    </profiles>
+    </profiles> -->
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>sxpsnapshot</id>
+			<name>sxp snapshot</name>
+			<url>http://10.64.24.49:8081/nexus/content/repositories/sxpsnapshot/</url>
+		</snapshotRepository>
+		<repository>
+			<id>sxprelease</id>
+			<name>sxp release</name>
+			<url>http://10.64.24.49:8081/nexus/content/repositories/sxprelease/</url>
+		</repository>
+	</distributionManagement>
+	<repositories>
+		<repository>
+			<id>sxprepositories</id>
+			<name>sxp repositories</name>
+			<url>http://10.64.24.49:8081/nexus/content/groups/sxprepositories/</url>
+			<releases>   
+          <enabled>true</enabled>   
+      </releases>   
+      <snapshots>   
+          <enabled>false</enabled>   
+      </snapshots> 
+		</repository>
+	</repositories>
+	 <pluginRepositories>   
+        <pluginRepository>   
+            <id>public</id>   
+            <name>Public Repositories</name>   
+            <url>http://10.64.24.49:8081/nexus/content/groups/public/</url>   
+            <releases>   
+              <enabled>true</enabled>   
+            </releases>   
+            <snapshots>   
+              <enabled>false</enabled>   
+            </snapshots>  
+        </pluginRepository>   
+    </pluginRepositories>
 
 </project>
